# StatMind

./: Cargo.toml  build.rs  runner.zsh
.cargo/: config.toml
.github/workflows/: build.yaml
src/: Info.plist  cellID.txt  discord.rs  entityID.txt  generated.rs  itemID.txt  main.rs  propID.txt  types.rs
